# aspnetcore/src/mynhs/Models/FinishedSubmissionStatusBaseWithoutLocation.cs
@@ -24,8 +24,22 @@ namespace mynhs.Models
     /// 
     /// </summary>
     [DataContract]
-    public partial class SubmissionResponse : SubmissionStatusBaseWithLocation, IEquatable<SubmissionResponse>
+    public partial class FinishedSubmissionStatusBaseWithoutLocation : SubmissionStatusBase, IEquatable<FinishedSubmissionStatusBaseWithoutLocation>
     { 
+        /// <summary>
+        /// Gets or Sets DateSubmitted
+        /// </summary>
+
+        [DataMember(Name="DateSubmitted")]
+        public DateTimeOffset? DateSubmitted { get; set; }
+
+        /// <summary>
+        /// Gets or Sets SubmissionStatusLocation
+        /// </summary>
+
+        [DataMember(Name="SubmissionStatusLocation")]
+        public string SubmissionStatusLocation { get; set; }
+
         /// <summary>
         /// Returns the string presentation of the object
         /// </summary>
@@ -33,7 +47,9 @@ namespace mynhs.Models
         public override string ToString()
         {
             var sb = new StringBuilder();
-            sb.Append("class SubmissionResponse {\n");
+            sb.Append("class FinishedSubmissionStatusBaseWithoutLocation {\n");
+            sb.Append("  DateSubmitted: ").Append(DateSubmitted).Append("\n");
+            sb.Append("  SubmissionStatusLocation: ").Append(SubmissionStatusLocation).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
         }
@@ -56,20 +72,30 @@ namespace mynhs.Models
         {
             if (ReferenceEquals(null, obj)) return false;
             if (ReferenceEquals(this, obj)) return true;
-            return obj.GetType() == GetType() && Equals((SubmissionResponse)obj);
+            return obj.GetType() == GetType() && Equals((FinishedSubmissionStatusBaseWithoutLocation)obj);
         }
 
         /// <summary>
-        /// Returns true if SubmissionResponse instances are equal
+        /// Returns true if FinishedSubmissionStatusBaseWithoutLocation instances are equal
         /// </summary>
-        /// <param name="other">Instance of SubmissionResponse to be compared</param>
+        /// <param name="other">Instance of FinishedSubmissionStatusBaseWithoutLocation to be compared</param>
         /// <returns>Boolean</returns>
-        public bool Equals(SubmissionResponse other)
+        public bool Equals(FinishedSubmissionStatusBaseWithoutLocation other)
         {
             if (ReferenceEquals(null, other)) return false;
             if (ReferenceEquals(this, other)) return true;
 
-            return false;
+            return 
+                (
+                    DateSubmitted == other.DateSubmitted ||
+                    DateSubmitted != null &&
+                    DateSubmitted.Equals(other.DateSubmitted)
+                ) && 
+                (
+                    SubmissionStatusLocation == other.SubmissionStatusLocation ||
+                    SubmissionStatusLocation != null &&
+                    SubmissionStatusLocation.Equals(other.SubmissionStatusLocation)
+                );
         }
 
         /// <summary>
@@ -82,6 +108,10 @@ namespace mynhs.Models
             {
                 var hashCode = 41;
                 // Suitable nullity checks etc, of course :)
+                    if (DateSubmitted != null)
+                    hashCode = hashCode * 59 + DateSubmitted.GetHashCode();
+                    if (SubmissionStatusLocation != null)
+                    hashCode = hashCode * 59 + SubmissionStatusLocation.GetHashCode();
                 return hashCode;
             }
         }
@@ -89,12 +119,12 @@ namespace mynhs.Models
         #region Operators
         #pragma warning disable 1591
 
-        public static bool operator ==(SubmissionResponse left, SubmissionResponse right)
+        public static bool operator ==(FinishedSubmissionStatusBaseWithoutLocation left, FinishedSubmissionStatusBaseWithoutLocation right)
         {
             return Equals(left, right);
         }
 
-        public static bool operator !=(SubmissionResponse left, SubmissionResponse right)
+        public static bool operator !=(FinishedSubmissionStatusBaseWithoutLocation left, FinishedSubmissionStatusBaseWithoutLocation right)
         {
             return !Equals(left, right);
         }
