# aspnetcore/src/mynhs/wwwroot/swagger-original.json
@@ -23,7 +23,7 @@
     "description" : "Basic Observations"
   }, {
     "name" : "Observations|Submissions",
-    "description" : "Submit new observations in a fully Asyncronous way. Call POST with initital data and to get a submission Id, make changes with PUT, and then to start the submission call PUT on /submit."
+    "description" : "Submit new observations in a fully Asyncronous way supporting idempotency of the full transaction. Call POST with initital data and to get a submission Id, make changes with PUT, and then to start the submission call PUT on /submit."
   }, {
     "name" : "Digital Health Checks",
     "description" : "My Completed Digital Health Checks"
@@ -571,7 +571,7 @@
         } ],
         "responses" : {
           "202" : {
-            "description" : "Accepted",
+            "description" : "Note the 202 Accepted response, not a 200 OK. The location of the created resource when created is avaliable from the Location header, or the ResourceLocation property in the response.",
             "headers" : {
               "Location" : {
                 "description" : "202 The location that the created resource will be avaliable at. Same as response body ResourceLocation",
@@ -1403,7 +1403,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/NhsProfile"
+                  "$ref" : "#/components/schemas/SubmissionStatusBaseWithDataArray"
                 }
               }
             }
@@ -1434,13 +1434,34 @@
             }
           }
         } ],
+        "requestBody" : {
+          "description" : "Starts a submission on an observation",
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/Observation"
+              },
+              "examples" : {
+                "DaysOld" : {
+                  "$ref" : "#/components/examples/ObservationExample"
+                }
+              }
+            }
+          },
+          "required" : true
+        },
         "responses" : {
           "200" : {
             "description" : "OK",
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/NhsProfile"
+                  "$ref" : "#/components/schemas/SubmissionStatusBase"
+                },
+                "examples" : {
+                  "DaysOld" : {
+                    "$ref" : "#/components/examples/ObservationResponseExample"
+                  }
                 }
               }
             }
@@ -1486,8 +1507,40 @@
           "example" : "baf12b6c-d18b-43ad-b49e-e72ca102a970"
         } ],
         "responses" : {
+          "200" : {
+            "description" : "Note the 200 response. This is not saying created, or accepted - but OK it has finished but not created. This actually indicated likely a problem here.",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/FinishedSubmissionStatusBaseWithoutLocation"
+                }
+              }
+            }
+          },
+          "201" : {
+            "description" : "Note the 201 Created response, not a 200 OK. The location of the created resource avaliable from the Location header, or the ResourceLocation property in the response.",
+            "headers" : {
+              "Location" : {
+                "description" : "202 The location that the created resource will be avaliable at. Same as response body ResourceLocation",
+                "style" : "simple",
+                "explode" : false,
+                "schema" : {
+                  "type" : "string",
+                  "format" : "uri"
+                },
+                "example" : "/mynhs/my/observations/{ResourceId}"
+              }
+            },
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/SubmissionResponse"
+                }
+              }
+            }
+          },
           "202" : {
-            "description" : "Accepted",
+            "description" : "Note the 202 Accepted response, not a 200 OK. The location of the created resource when created is avaliable from the Location header, or the ResourceLocation property in the response.",
             "headers" : {
               "Location" : {
                 "description" : "202 The location that the created resource will be avaliable at. Same as response body ResourceLocation",
@@ -1607,13 +1660,34 @@
           },
           "example" : "baf12b6c-d18b-43ad-b49e-e72ca102a970"
         } ],
+        "requestBody" : {
+          "description" : "Starts a submission on an observation",
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/Observation"
+              },
+              "examples" : {
+                "DaysOld" : {
+                  "$ref" : "#/components/examples/ObservationExample"
+                }
+              }
+            }
+          },
+          "required" : true
+        },
         "responses" : {
           "200" : {
             "description" : "OK",
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/NhsProfile"
+                  "$ref" : "#/components/schemas/SubmissionStatusBase"
+                },
+                "examples" : {
+                  "DaysOld" : {
+                    "$ref" : "#/components/examples/ObservationResponseExample"
+                  }
                 }
               }
             }
@@ -1879,6 +1953,22 @@
           "GpIdCode" : 0
         }
       },
+      "Observation" : {
+        "type" : "object",
+        "anyOf" : [ {
+          "$ref" : "#/components/schemas/Age"
+        }, {
+          "$ref" : "#/components/schemas/Height"
+        }, {
+          "$ref" : "#/components/schemas/Mass"
+        }, {
+          "$ref" : "#/components/schemas/BloodPressure"
+        }, {
+          "$ref" : "#/components/schemas/BloodSugar"
+        }, {
+          "$ref" : "#/components/schemas/Colesterol"
+        } ]
+      },
       "DigitalHealthCheckRequest" : {
         "type" : "object",
         "oneOf" : [ {
@@ -2141,7 +2231,7 @@
       "SubmissionResponse" : {
         "type" : "object",
         "allOf" : [ {
-          "$ref" : "#/components/schemas/SubmissionStatusBase"
+          "$ref" : "#/components/schemas/SubmissionStatusBaseWithLocation"
         } ]
       },
       "SubmissionStatusBase" : {
@@ -2159,6 +2249,52 @@
             "type" : "string",
             "format" : "uuid"
           },
+          "DateSubmissionCreated" : {
+            "type" : "string",
+            "format" : "date-time"
+          },
+          "SubmittedData" : {
+            "type" : "object"
+          }
+        },
+        "example" : {
+          "SubmittedData" : { },
+          "SubmittedByUserId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+          "DateSubmissionCreated" : "2000-01-23T04:56:07.000+00:00",
+          "SubmittedByAppId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+          "SubmissionId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91"
+        }
+      },
+      "SubmissionStatusBaseWithDataArray" : {
+        "type" : "array",
+        "items" : {
+          "$ref" : "#/components/schemas/SubmissionStatusBase"
+        }
+      },
+      "FinishedSubmissionStatusBaseWithoutLocation" : {
+        "type" : "object",
+        "properties" : {
+          "DateSubmitted" : {
+            "type" : "string",
+            "format" : "date-time"
+          },
+          "SubmissionStatusLocation" : {
+            "type" : "string",
+            "format" : "uri",
+            "example" : "/mynhs/my/observations/submissions/{SubmissionId}"
+          }
+        },
+        "example" : {
+          "SubmissionStatusLocation" : "/mynhs/my/observations/submissions/{SubmissionId}",
+          "DateSubmitted" : "2000-01-23T04:56:07.000+00:00"
+        },
+        "allOf" : [ {
+          "$ref" : "#/components/schemas/SubmissionStatusBase"
+        } ]
+      },
+      "SubmissionStatusBaseWithLocation" : {
+        "type" : "object",
+        "properties" : {
           "ResourceId" : {
             "type" : "string",
             "format" : "uuid"
@@ -2178,7 +2314,10 @@
             "format" : "uri",
             "example" : "/mynhs/my/observations/{ResourceId}"
           }
-        }
+        },
+        "allOf" : [ {
+          "$ref" : "#/components/schemas/SubmissionStatusBase"
+        } ]
       },
       "SubmissionStatus" : {
         "type" : "object",
@@ -2219,7 +2358,7 @@
           } ]
         },
         "allOf" : [ {
-          "$ref" : "#/components/schemas/SubmissionStatusBase"
+          "$ref" : "#/components/schemas/SubmissionStatusBaseWithLocation"
         } ]
       },
       "SubmissionResponseDetails" : {
@@ -2275,7 +2414,7 @@
     },
     "responses" : {
       "SubmissionAcceptedResponse" : {
-        "description" : "Accepted",
+        "description" : "Note the 202 Accepted response, not a 200 OK. The location of the created resource when created is avaliable from the Location header, or the ResourceLocation property in the response.",
         "headers" : {
           "Location" : {
             "description" : "202 The location that the created resource will be avaliable at. Same as response body ResourceLocation",
@@ -2292,6 +2431,38 @@
           "application/json" : {
             "schema" : {
               "$ref" : "#/components/schemas/SubmissionResponse"
+            }
+          }
+        }
+      },
+      "SubmissionCreatedResponse" : {
+        "description" : "Note the 201 Created response, not a 200 OK. The location of the created resource avaliable from the Location header, or the ResourceLocation property in the response.",
+        "headers" : {
+          "Location" : {
+            "description" : "202 The location that the created resource will be avaliable at. Same as response body ResourceLocation",
+            "style" : "simple",
+            "explode" : false,
+            "schema" : {
+              "type" : "string",
+              "format" : "uri"
+            },
+            "example" : "/mynhs/my/observations/{ResourceId}"
+          }
+        },
+        "content" : {
+          "application/json" : {
+            "schema" : {
+              "$ref" : "#/components/schemas/SubmissionResponse"
+            }
+          }
+        }
+      },
+      "SubmissionFinishedResponse" : {
+        "description" : "Note the 200 response. This is not saying created, or accepted - but OK it has finished but not created. This actually indicated likely a problem here.",
+        "content" : {
+          "application/json" : {
+            "schema" : {
+              "$ref" : "#/components/schemas/FinishedSubmissionStatusBaseWithoutLocation"
             }
           }
         }
@@ -2438,6 +2609,25 @@
       }
     },
     "examples" : {
+      "ObservationExample" : {
+        "value" : {
+          "Age" : {
+            "Days" : 4329
+          }
+        }
+      },
+      "ObservationResponseExample" : {
+        "value" : {
+          "SubmissionId" : "3fa85f64-5717-4562-b3fc-2c963f66afa6",
+          "SubmittedByUserId" : "3fa85f64-5717-4562-b3fc-2c963f66afa6",
+          "SubmittedByAppId" : "3fa85f64-5717-4562-b3fc-2c963f66afa6",
+          "SubmittedData" : {
+            "Age" : {
+              "Days" : 4329
+            }
+          }
+        }
+      },
       "DaysOldExample" : {
         "summary" : "Number of days old",
         "value" : {
